fix word spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -33,6 +33,7 @@ a,
 
 .subheader h4 {
   font-weight: 100;
+  word-spacing: 1rem;
 }
 
 .artist-list {
@@ -83,6 +84,7 @@ footer {
 
   .subheader h4 {
     font-size: 2.5rem;
+    word-spacing: 1.5rem;
   }
 
   section {
